--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+          Happy birthday to youu!!  I wish you all the best for your birthday and I promise that I will do everything to make you happy. Falling in love should last forever. Forget all the bad and the things that made you sad. All best wishes from someone who loves you immensely. Hugs and Kisses!
         </p>
         <p class="fake-btn">Send</p>
       </div>
@@ -52,7 +52,7 @@
       </p>
       <p class="idea-4">Because,</p>
       <p class="idea-5">
-        You are Special
+        You are Special in my eyes
         <span>:)</span>
       </p>
       <p class="idea-6">
@@ -62,7 +62,7 @@
     </div>
 
     <div class="six">
-      <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+      <img src="./img/dumby.jpeg" alt="profile" class="profile-picture" id="imagePath"/>
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
