--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to youu!!  I wish you all the best for your birthday and I promise that I will do everything to make you happy. Falling in love should last forever. Forget all the bad and the things that made you sad. All best wishes from someone who loves you immensely. Hugs and Kisses!
+          Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!! I wish that all your dreams come true and you are showered with happiness and success in life. All best wishes from someone who loves you immensely. Hugs and Kisses!
         </p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
 
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
+      <p class="idea-1">Well that was i'm going to tell you at first</p>
       <p class="idea-2">But then I stopped.</p>
       <p class="idea-3">
         I realised, I wanted to do something<br>
