--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!! I wish that all your dreams come true and you are showered with happiness and success in life. All best wishes from someone who loves you immensely. Hugs and Kisses!
+          Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!!  I wish that all your dreams come true and you are showered with happiness and success in life. This day is extra special because it reminds me that you are friend, duo, brother, and emotional, support All best wishes from someone who loves you immensely. Hugs and Kisses!
+        </p>
+        <p class="fake-btn">Send</p>
+      </div>
+    </div>
+
+    <div class="four-1">
+      <div class="text-box">
+        <p class="hbd-chatbox">
+          Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!!  I wish that all your dreams come true and you are showered with happiness and success in life. This day is extra special because it reminds me that you are friend, duo, brother, and emotional, support All best wishes from someone who loves you immensely. Hugs and Kisses!
         </p>
         <p class="fake-btn">Send</p>
       </div>
