--- a/index.html
+++ b/index.html
@@ -36,17 +36,22 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!!  I wish that all your dreams come true and you are showered with happiness and success in life. This day is extra special because it reminds me that you are friend, duo, brother, and emotional support. All best wishes from someone who loves you immensely. Hugs and Kisses!
+          
+LOOK!! NOOB HAVING A BIRTHDAY!
+Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!! 
+This day is extra special because it reminds me that you are my friend, duo, sister, and my emotional support. 
+I wish that all your dreams come true and you are showered with happiness and success in life.
+All best wishes from someone who loves you immensely. Hugs and Kisses!    -JOJE
         </p>
         <p class="fake-btn">Send</p>
       </div>
     </div>
 
     <div class="five">
-      <p class="idea-1">Well that was i'm going to tell you at first</p>
-      <p class="idea-2">But then I stopped.</p>
+      <p class="idea-1">Well I want to make you happy in your birthday</p>
+      <p class="idea-2">So</p>
       <p class="idea-3">
-        I realised, I wanted to do something<br>
+        I wanted to do something<br>
         <strong>special</strong>
         .
       </p>
@@ -66,7 +71,7 @@
       <img src="img/hat.svg" alt="hat" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 id="wishText"></h5>
       </div>
     </div>
 
