--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <audio class="song" loop autoplay>
+  <audio class="song" id="song" loop autoplay>
     <source src="./music/hbd.mp3">
     </source>
     Your browser isn't invited for super fun audio time.
@@ -37,11 +37,11 @@
       <div class="text-box">
         <p class="hbd-chatbox">
           
-LOOK!! NOOB HAVING A BIRTHDAY!
+LOOK!! NOOB HAVING A BIRTHDAY! <br>
 Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!! 
 This day is extra special because it reminds me that you are my friend, duo, sister, and my emotional support. 
 I wish that all your dreams come true and you are showered with happiness and success in life.
-All best wishes from someone who loves you immensely. Hugs and Kisses!    -JOJE
+All best wishes from someone who loves you immensely. Hugs and Kisses!<br>    -JOJE
         </p>
         <p class="fake-btn">Send</p>
       </div>
