--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
     <div class="four">
       <div class="text-box">
         <p class="hbd-chatbox">
-          
-LOOK!! NOOB HAVING A BIRTHDAY! <br>
-Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!! 
-This day is extra special because it reminds me that you are my friend, duo, sister, and my emotional support. 
-I wish that all your dreams come true and you are showered with happiness and success in life.
-All best wishes from someone who loves you immensely. Hugs and Kisses!<br>    -JOJE
+        LOOK!! NOOB HAVING A BIRTHDAY! <br>
+        Happy birthday to the most incredible, loving, beautiful, and awesome girl on this planet!! 
+        This day is extra special because it's the day you were born. 
+        Thank you for being my friend, best friend, duo, sister, and my emotional support.
+        I just want you to know that your are my most important person and i never want to lose you.
+        I wish that all your dreams come true and you are showered with happiness and success in life.
+        All best wishes from someone who loves you immensely. Hugs and Kisses!<br>    -JOJE
         </p>
         <p class="fake-btn">Send</p>
       </div>
